--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
     </div>
 
   </div>
+  
+  <div class="container-fluid know-me">
+     <p>
+       To know me or get in touch with me
+     </p>
+     <a href="CSS-My Site/about_index.html" class="btn btn-outline-info">Click Here</a>
+   </div>
 
   <div class="bottom-container">
 
